<resources>
    <string name="app_name">Todosiast</string>
    <string name="update_your_task">Update your task</string>
    <string name="task">Task</string>

    <string name="description">Description</string>

    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="log_out">Log out</string>
    <string name="fab_des">add to-do list</string>
    <string name="your_real_email_password">Your real Email password:</string>
    <string name="email_to">Email to:</string>
    <string name="share_tasks">Share Tasks</string>
    <string name="reward">Reward</string>
    <string name="date_info">April 4, 2022</string>
    <string name="finished_text">Finished</string>
    <string name="task_text">Task</string>
    <string name="description_text">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter password...</string>
    <string name="enter_email">Enter Email..</string>
    <string name="have_an_account_login">Have an account? Login</string>
    <string name="register">Register</string>
    <string name="people_work_together">People work together</string>
    <string name="todosiast_text">Todosiast</string>
</resources>